# AutoTS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Metro_Interstate_Traffic_Volume.csv  OPTIMIZER_FIX_SUMMARY.md  README.md  TODO.md  autots_forecast.csv  autots_forecast_template.csv  autots_forecast_template_example2.csv  autots_forecast_template_params_loop.csv  best_results.ots  example_export.csv  example_export2.csv  extended_tutorial.md  functional_environments.md  general_templateDESKTOP-JS3OJ8L.csv  general_templateDESKTOP-U8VOURS.csv  general_template_10700smallDESKTOP-JS3OJ8L.csv  general_template_1135g7_intel_coldcolin-1135.csv  general_template_1135g7_openblascolin-1135.csv  general_template_1135g7intel_fullcolin-1135.csv  general_template_1135g7smallcolin-1135.csv  general_template_11700_intelfullDESKTOP-JS3OJ8L.csv  general_template_11700_smallDESKTOP-JS3OJ8L.csv  general_template_11700intel_full2DESKTOP-JS3OJ8L.csv  general_template_11700intel_full_ocDESKTOP-JS3OJ8L.csv  general_template_11700openblasfullDESKTOP-JS3OJ8L.csv  general_template_amd_fullcolin-pn50.csv  general_template_amd_smallcolin-pn50.csv  general_template_openblasDESKTOP-JS3OJ8L.csv  holiday_result_6.csv  m5.csv  m5_template1.csv  m5_template3.csv  m6_functions.py  m6_submission8.csv  m6_submission8_2.csv  (+23 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
autots/: __init__.py
autots/datasets/: SYNTHETIC_DATA_GUIDE.md  __init__.py  _base.py  fred.py  synthetic.py  synthetic_examples.py
autots/evaluator/: __init__.py  anomaly_detector.py  auto_model.py  auto_ts.py  benchmark.py  event_forecasting.py  feature_detector.py  metrics.py  validation.py
docs/: .gitignore  Makefile  catlin_m6_paper.tex  conf.py  index.html  index.rst
kernel_failures/: current_model_m5_1.json  current_model_m5_2.json  out_of_memory_0.json
tests/: model_forecasts.json  test_anomalies.py  test_autots.py  test_bayesian_regression.py  test_calendar.py  test_calendar_holiday.py  test_cassandra.py  test_changepoints.py  test_cointegration.py  test_components.py  test_constraint.py  test_deepssm.py  test_event_forecasting.py  test_fast_kalman.py  test_feature_detector.py  test_g726_filter.py  test_g7xx_codec.py  test_impute.py  test_matrix_var_models.py  test_mcp_server.py  test_metrics.py  test_mlensemble.py  test_model_params_alignment.py  test_nvar.py  test_percentile.py  test_prediction_object.py  test_preprocessing_experts.py  test_regressor.py  test_seasonal.py  test_sklearn_models.py  test_statsmodels.py  test_synthetic_data.py  test_transforms.py  test_validation.py  test_window_functions.py  transform_forecasts.json
(+77 files in other folders)
