[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autots"
version = "1.0.0"
authors = [
  { name="Colin Catlin", email="colin.catlin@gmail.com" },
]
description = "Automated Time Series Forecasting"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.1.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
]
[project.optional-dependencies]
additional = [
	"holidays>=0.9",
	'prophet>=1.0.0',
	'fredapi',
	'tensorflow',
	'xgboost>=1.6',
	'lightgbm',
	'joblib',
	'scipy',
	'arch',
	'numexpr',
	'bottleneck',
	'yfinance',
	'pytrends',
	'matplotlib',
	'requests',
	'seaborn',
]
mcp = [
	"holidays>=0.9",
	'fredapi',
	'lightgbm',
	'joblib',
	'scipy',
	'numexpr',
	'bottleneck',
	'yfinance',
	'pytrends',
	'matplotlib',
	'requests',
	'seaborn',
	"mcp>=1.0.0",
]

[project.scripts]
autots-mcp = "autots.mcp.server:serve"

[project.urls]
"Homepage" = "https://github.com/winedarksea/AutoTS"
"Bug Tracker" = "https://github.com/winedarksea/AutoTS/issues"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.setuptools.package-data]
"autots.mcp" = ["*.json", "*.md"]

[tool.setuptools]
include-package-data = true
